210404|C따배씨 12강 Start && img 경로 수정(파일이름 수정)

--- a/C:C++/따배씨/02_C언어를 소개합니다.md
+++ b/C:C++/따배씨/02_C언어를 소개합니다.md
@@ -176,7 +176,7 @@ int main(){
 
 * C keyword: C 언어에서 사용하는 단어들
 
-  ![2_8_1_Ckeywords](./imgs/2_8_1_Ckeywords.png)
+  ![2_8_1_Ckeywords](./imgs/2_8_1.png)
   * 변수나 함수 이름에 예약어를 사용하면 안됨
   * since C99 / C11: C99 / C11 등의 표준 이후로 정의
   * 예약어: _(언더바) 로 시작하는 단어
@@ -185,7 +185,7 @@ int main(){
 
 * 예약어
 
-  ![2_8_2_C예약어](./imgs/2_8_2_C예약어.png)
+  ![2_8_2_C예약어](./imgs/2_8_2.png)
   * 해당하는 Header include 후 예약어로 사용 가능
     * include 하지 않으면 사용 가능 하나, 대부분의 경우 사용하지 않는것을 권장
 
