--- a/C:C++/따배씨/03_데이터와 C언어.md
+++ b/C:C++/따배씨/03_데이터와 C언어.md
@@ -12,7 +12,7 @@
 
 * 자료형 - 정수 자료형/실수 자료형
 
-  ![3_1_1_C언어의자료형](./imgs/3_1_1_C언어의자료형.png)
+  ![3_1_1_C언어의자료형](./imgs/3_1_1.png)
   * 문자도 정수로 처리
   * 실수 자료형의 사용에는 용도에 따라 범위가 크게 달라짐
     * 자료형의 사이즈가 크면 속도가 느려지기 때문에 프로그래머의 선택으로 결정하는것이 유리
@@ -127,7 +127,7 @@ int main()
 
 * 형식 지정자
 
-  ![3_4_1_형식지정자](./imgs/3_4_1_형식지정자.png)
+  ![3_4_1_형식지정자](./imgs/3_4_1.png)
   
   * 형식 지정자의 사용으로 다양한 자료형의 데이터를 입/출력 받을 수 있음
 
@@ -286,7 +286,7 @@ int main()
 
 ##### 3.7 다양한 정수형들
 
-![3_6_1_정수자료형](./imgs/3_6_1_정수자료형.png)
+![3_6_1_정수자료형](./imgs/3_6_1.png)
 
 * 4byte Int 형이 기본
   * 4byte int 형의 범위는 long과 같아서 int를 많이 사용하고 long의 사용빈도가 줄어듬
@@ -336,7 +336,7 @@ int main()
 
 ##### 3.8 8진수와 16진수
 
-![3_6_8_진수테이블](./imgs/3_6_8_진수테이블.png)
+![3_6_8_진수테이블](./imgs/3_6_8.png)
 
 
 
