--- a/C:C++/따배씨/04_문자열과 형식 맞춘 입출력.md
+++ b/C:C++/따배씨/04_문자열과 형식 맞춘 입출력.md
@@ -440,9 +440,9 @@ int main()
 
 ##### 4.7 pritnf() 함수의 변환 지정자 Conversion Specifiers
 
-![4_7_1_Conversion Specifiers List1](./imgs/4_7_1_Conversion Specifiers.png)
+![4_7_1_Conversion Specifiers List1](./imgs/4_7_1.png)
 
-![4_7_2_Conversion Specifiers List2](./imgs/4_7_2_Conversion Specifiers2.png)
+![4_7_2_Conversion Specifiers List2](./imgs/4_7_2.png)
 
 * 기본 사용법
 
@@ -564,7 +564,7 @@ we owe this to everyone who's not in this room to try.\n");
 
 * flag
 
-  ![4_8_1_flags](./imgs/4_8_1_flags.png)
+  ![4_8_1_flags](./imgs/4_8_1.png)
 
   * ' - ': 출력 시 왼쪽 정렬 (기본값은 오른쪽 정렬), width와 함께 사용
   * '+' : 양수 일 때도 '+' 기호를 출력 (기본값은 양수 일 때 '+' 출력 안함)
@@ -573,20 +573,20 @@ we owe this to everyone who's not in this room to try.\n");
 
 * width
 
-  ![4_8_2_width](./imgs/4_8_2_width.png)
+  ![4_8_2_width](./imgs/4_8_2.png)
 
   * 표기한 숫자 만큼 빈칸을 포함하여 출력
   * ' * ' : * 에 해당하는 숫자를 입력받아 처리
 
 * .precision
 
-  ![4_8_3_presicion](./imgs/4_8_3_presicion.png)
+  ![4_8_3_presicion](./imgs/4_8_3.png)
   * '.number' : 숫자만큼의 자리수를 출력하여 정밀도를 보장, 부족한 자리수는 0으로 출력
   * ' .* ' : * 에 해당하는 숫자를 입력받아 처리
 
 * lenght
 
-  ![4_8_4_length](./imgs/4_8_4_length.png)
+  ![4_8_4_length](./imgs/4_8_4.png)
   * 정수(float) 출력시 내부적으로 double로 처리 됨
     * long double의 경우 L 을 사용하여 출력하지만, 대부분 double과 logn double의 사이즈가 같게 처리 하기 때문에 명확한 표현이 필요한 경우 외에는 의미가 없음
 
@@ -703,11 +703,11 @@ printf("%f %lld %d\n\n", n1, n2, n3); // 8, 8, 4 (Y, N, Y)
 
 * 변환 지정자 Conversion Specifiers
 
-  ![4_10_1_변환지정자](./imgs/4_10_1_변환지정자.png)
+  ![4_10_1_변환지정자](./imgs/4_10_1.png)
 
 * 변환 지정자 앞 수식어 Conversion Specifier Modifier
 
-  ![4_10_2_변환지정자 수식어](imgs/4_10_2_변환지정자 수식어.png)
+  ![4_10_2_변환지정자 수식어](imgs/4_10_2.png)
 
 
 
