--- a/C:C++/따배씨/05_연산자&표현식&문장.md
+++ b/C:C++/따배씨/05_연산자&표현식&문장.md
@@ -189,13 +189,13 @@ int main(){
 
 * 표현식 트리 Expression Tree
 
-  ![5_6_1_표현식트리](./imgs/5_6_1_표현식트리.png)
+  ![5_6_1_표현식트리](./imgs/5_6_1.png)
 
   * 컴퓨터 내부적으로 컴파일러가 수식을 그래프 구조로 만들어 우선순위를 파악하여 계산
 
 * 연산자의 우선순위 Operator precedence
 
-  ![5_6_2_연산자의우선순위](./imgs/5_6_2_연산자의우선순위.png)
+  ![5_6_2_연산자의우선순위](./imgs/5_6_2.png)
   * C표준 문서에서 괄호부분의 수식을 Operator 가 아닌 Primary Expression 이라고 함
   * 괄호의 우선순위가 매우 높음
 
