--- a/C:C++/따배씨/08_문자 입출력과 입력 유효성 검증.md
+++ b/C:C++/따배씨/08_문자 입출력과 입력 유효성 검증.md
@@ -6,7 +6,7 @@
 
 * 입력을 받거나 출력을 할때, 한번에 처리하면 효율이 높기 때문에 사용
 
-![8_1_1_버퍼](./imgs/8_1_1_버퍼.png)
+![8_1_1_버퍼](./imgs/8_1_1.png)
 
 * 입출력 작업의 속도가 느리기때문에, 버퍼를 통해 해결
   * 버퍼에 한번에 모아서 처리
