--- a/C:C++/따배씨/09_함수.md
+++ b/C:C++/따배씨/09_함수.md
@@ -264,7 +264,7 @@ int int_max(int i, int j)
 
 * 최신 컴파일러는 여러가지 최적화 기술을 사용하기 때문에, 변수의 메모리 주소가 고정 되기도 함
 
-![9_5_1_스택](imgs/9_5_1_스택.png)
+![9_5_1_스택](imgs/9_5_1.png)
 
 * 프로그램이 진행됨에 따른 stack의 변화
 * stack 메모리에 존재하는 변수는 어디서든 직접 접근해서 사용 가능
@@ -381,7 +381,7 @@ void my_func(int n){
 
 
 
-![9_7_1_재귀함수와 스택](imgs/9_7_1_재귀함수와 스택.png)
+![9_7_1_재귀함수와 스택](imgs/9_7_1.png)
 
 * 재귀함수의 호출에서의 stack
 * 재귀함수의 호출 시 변수 메모리 공간 뿐만 아니라, 함수가 동작하기 위한 공간도 같이 stack 에 쌓임
@@ -612,13 +612,13 @@ void print_str(char* str){
 
 ##### 9.12 포인터 Pointer 의 작동 원리
 
-![9_12_1_변수의 메모리 사용](imgs/9_12_1_변수의 메모리 사용.png)
+![9_12_1_변수의 메모리 사용](imgs/9_12_1.png)
 
 * 변수의 메모리 사용
 
 
 
-![9_12_2_메모리와 포인터](imgs/9_12_2_메모리와 포인터.png)
+![9_12_2_메모리와 포인터](imgs/9_12_2.png)
 
 * 메모리와 포인터
 
@@ -635,7 +635,7 @@ void print_str(char* str){
 
 
 
-![9_12_3_포인터 문법 세가지](imgs/9_12_3_포인터 문법 세가지.png)
+![9_12_3_포인터 문법 세가지](imgs/9_12_3.png)
 
 ```c
 #include <stdio.h>
@@ -656,7 +656,7 @@ int main(){
 
 
 
-![9_12_3_포인터 변수의 사용 예시](imgs/9_12_3_포인터 변수의 사용 예시.png)
+![9_12_3_포인터 변수의 사용 예시](imgs/9_12_4.png)
 
 * 포인터 변수의 사용 예시
 
