--- a/C:C++/따배씨/0_컴퓨터의작동원리.md
+++ b/C:C++/따배씨/0_컴퓨터의작동원리.md
@@ -83,12 +83,12 @@
     * Stored-program Computer; 내장형 프로그램 방식의 컴퓨터
   * CPU 와 메모리의 분리: 연산장치와 기억장치의 분리
     
-    ![폰노이만구조](./imgs/0_5_1_폰노이만구조.png)
+    ![0_5_1_폰노이만구조](./imgs/0_5_1.png)
     
   
 *  현대 컴퓨터 구조
 
-  ![현대컴퓨터구조](./imgs/0_5_2_현대컴퓨터구조.png)
+  ![0_5_2_현대컴퓨터구조](./imgs/0_5_2.png)
   
   * 운영체제의 도움으로 입출력장치에 대해 신경을 덜 쓰게 됨
   * Single System Computer Bus: Data를 주고받는 통로가 하나
@@ -110,7 +110,7 @@
 
 * 메모리 구조
 
-  ![메모리구조](imgs/0_6_1_메모리구조.png)
+  ![0_6_1_메모리구조](imgs/0_6_1.png)
 
   * 트랜지스터와 캐패시터로 하나의 저장공간인 Cell 을 이룸
     * 1 Bit 씩 저장 - 2진수 숫자 하나, Binary Digit
@@ -182,7 +182,7 @@
     * 변환된 2진수의 보수를 취함
     * 보수 + 1
 
-    ![0_10_1_보수예시](./imgs/0_10_1_보수예시.png)
+    ![0_10_1_보수예시](./imgs/0_10_1.png)
 
     * 2의 보수 표현법에서 0과 -0은 같은 수
 
