--- a/C:C++/따배씨/10_배열과 포인터.md
+++ b/C:C++/따배씨/10_배열과 포인터.md
@@ -4,9 +4,9 @@
 
 ##### 10.1 배열과 메모리
 
-![10_1_1_배열과 메모리](./imgs/10_1_1_배열과 메모리.png)
+![10_1_1_배열과 메모리](./imgs/10_1_1.png)
 
-![10_1_2_배열과 메모리2](./imgs/10_1_2_배열과 메모리2.png)
+![10_1_2_배열과 메모리2](./imgs/10_1_2.png)
 
 * Array 선언 시, 연속된 메모리 공간을 할당 받게 됨
 
@@ -20,9 +20,9 @@
 
   * arr 가 할당 된 모든 주소값에 첫번째 주소값을 빼주고, 각 주소값에 할당된 size를 나누면 index number 가 나옴
 
-    * ![10_1_3_배열의 인덱스 넘버1](./imgs/10_1_3_배열의 인덱스 넘버1.png)
-    * ![10_1_4_배열의 인덱스 넘버2](./imgs/10_1_4_배열의 인덱스 넘버2.png)
-    * ![10_1_5_배열의 인덱스 넘버3](./imgs/10_1_5_배열의 인덱스 넘버3.png)
+    * ![10_1_3_배열의 인덱스 넘버1](./imgs/10_1_3.png)
+    * ![10_1_4_배열의 인덱스 넘버2](./imgs/10_1_4.png)
+    * ![10_1_5_배열의 인덱스 넘버3](./imgs/10_1_5.png)
 
 
 
@@ -349,7 +349,7 @@ int main(){
 
 * 2차원 배열도 메모리는 1차원
 
-![10_5_1_이차원배열](./imgs/10_5_1_이차원배열.png)
+![10_5_1_이차원배열](./imgs/10_5_1.png)
 
 
 
@@ -722,7 +722,7 @@ void add_value(int arr[], const int n, const int val){
 
 ##### 10.12 포인터에 대한 포인터 (2중 포인터) 의 작동 원리
 
-![10_12_1_이중포인터](./imgs/10_12_1_이중포인터.png)
+![10_12_1_이중포인터](./imgs/10_12_1.png)
 
 * 2중 포인터 : 포인터 변수의 주소를 저장
 
@@ -730,7 +730,7 @@ void add_value(int arr[], const int n, const int val){
 
 ##### 10.13 포인터의 배열과 2차원 배열
 
-![10_13_1_포인터와 이차원배열](./imgs/10_13_1_포인터와 이차원배열.png)
+![10_13_1_포인터와 이차원배열](./imgs/10_13_1.png)
 
 
 
@@ -796,7 +796,7 @@ int main(){
 
 ##### 10.14 2차원 배열과 포인터
 
-![10_14_1_포인터를 사용한 이차원 배열의 표현](./imgs/10_14_1_포인터를 사용한 이차원 배열의 표현.png)
+![10_14_1_포인터를 사용한 이차원 배열의 표현](./imgs/10_14_1.png)
 
 * 이차원 배열은 이중 포인터를 사용하여 표현 가능
 
