--- a/C:C++/따배씨/11_문자열 함수들.md
+++ b/C:C++/따배씨/11_문자열 함수들.md
@@ -54,7 +54,6 @@ int main(){
     
     return 0;
 }
-
 ```
 
 * ```c
@@ -131,7 +130,7 @@ char* str = "Hello, World";
 
 
 
-![11_2_1_메모리 레이아웃](./imgs/11_2_1_메모리 레이아웃.png)
+![11_2_1_메모리 레이아웃](./imgs/11_2_1.png)
 
 * 환경변수 : 프로그램이 실행되는 환경에 대한 변수
 * Stack : 지역변수들이 저장됨, 메모리의 크기를 Compiler 가 미리 예측할 수 있는 경우에 사용, Compiler 가 준비를 할 수 있기 때문에 처리 속도가 빠름
@@ -140,7 +139,7 @@ char* str = "Hello, World";
 
 
 
-![11_2_2_메모리 레이아웃2](./imgs/11_2_2_메모리 레이아웃2.png)
+![11_2_2_메모리 레이아웃2](./imgs/11_2_2.png)
 
 
 
@@ -358,7 +357,6 @@ int main(){
     }
     return 0;
 }
-
 ```
 
 * %-30s, 줄맞추기 옵션
@@ -443,7 +441,7 @@ int main(){
     for (int i = 0; i < 100; ++i){
         printf("%c", mythings[0][i]);
     }
-  	// Dancing in the rain Couting apples Watching movies with friends Writing sad letters Studying the C l
+  	// Dancing in the rain Couting apples Watching movies with friends Writing sad letters Studying the C l
     printf("\n\n");
     
     for (int i = 0; i < 200; ++i){
@@ -455,7 +453,7 @@ int main(){
     for (int i = 0; i < 200; ++i){
         printf("%c", yourthings[0][i]);
     }
-  	// Studying the C++ language               Eating                                  Watching Netflix                        Walking around till dark                Deleting spam emails                    
+  	// Studying the C++ language''''''''''Eating''''''''''''''''''''''''''''''''''Watching Netflix''''''''''''Walking around till dark''''''''''Deleting spam emails''''''''''''''''''''''
     printf("\n\n");
     return 0;
 }
@@ -1195,6 +1193,7 @@ int main(int argc, char* argv[]){
 * ```c
   strtol(str1, &end, 10);
   ```
+
   * str1 의 문자열을 Long type 으로 변환을 하다가 변환 할 수 없는 'H' 를 만나면 그 문자의 pointer 를 end 에 저장
 
 
@@ -1222,6 +1221,7 @@ int main(int argc, char* argv[]){
 * ```c
   strtoul(str2, &end, 16);
   ```
+
   * 10FF 까 숫자로 변환
 
 
@@ -1251,3 +1251,4 @@ int main(int argc, char* argv[]){
   ```
 
   * 10을 문자열로 변환하여  temp 에 저장
+
