210411|C따배씨 13.4 ~ 13강 완료

--- a/C:C++/따배씨/13_파일 입출력.md
+++ b/C:C++/따배씨/13_파일 입출력.md
@@ -179,5 +179,508 @@ int main(int argc, char* argv[]){
 
 
 
+##### 13.4 텍스트 파일 모드 스트링과 다양한 입출력 함수들
 
+##### 		fprintf(), fscanf(), fgets(), fputs()
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+#define MAX 31
+
+int main(void){
+    FILE * fp;
+    char words[MAX] = {'\0'};
+    
+    const char* filename = "record.txt";
+    
+    /*
+        fopne() mode strings for text  fiels
+        - r : reading
+        - w : creating-and-writing or over-writing
+        - a : appending or creating-and-writing
+        - r+ : both rading and writing
+        - w+ : reading writing, over-writin or crating
+        - a+ : reading and writing, appending or creating
+     */
+    
+    if ((fp = fopen(filename, "a+")) == NULL)
+    {
+        fprintf(stderr, "Can't open \"%s\" file.\n", filename);
+        
+        exit(EXIT_FAILURE);
+    }
+    
+    while((fscanf(stdin, "%30s", words) != NULL) && (words[0] != '.'))
+        fprintf(fp, "%s\n", words);
+    
+    rewind(fp); /* go back to begining of file*/
+    
+    while (fscanf(fp, "%s", words) == 1)// while (fscanf(fp, "%s", words) != EOF)
+        fprintf(stdout, "%s\n", words);
+
+    
+    if (fclose(fp) != 0)
+        fprintf(stderr, "Error closing file\n");
+    
+    return 0;
+}
+```
+
+* ```c
+  fprintf(stderr, "Can't open \"%s\" file.\n", filename);
+  ```
+
+  * stderr 에 출력을 하여도 stdout 과 같이 동작
+  * 구분하여 동작하게 하려면 운영체제에서 redirection 할때 error 로 출력하게 해주어야 함
+
+* ```c
+  while((fscanf(stdin, "%30s", words) != NULL) && (words[0] != '.'))
+          fprintf(fp, "%s\n", words);
+  ```
+  * ```c
+    fscanf(stdin, "%30s", words) != NULL
+    ```
+
+    * EOF check
+
+  * fgets()
+
+    ```c
+    while((fgets(words, MAX, stdin) != NULL) && (words[0] != '.'))
+      	fputs(words, fp);
+    ```
+
+* ```c
+  rewind(fp); /* go back to begining of file*/
+  ```
+
+  * 파일의 처음으로 돌아감
+
+* ```c
+  while (fscanf(fp, "%s", words) == 1)// while (fscanf(fp, "%s", words) != EOF)
+          fprintf(stdout, "%s\n", words);
+  ```
+
+  * ```c
+    fscanf(fp, "%s", words) == 1
+    ```
+
+    * EOF check
+
+  * fgets()
+
+    ```c
+    while (fgets(words, MAX, fp) != NULL)// EOF check
+    		fputs(words, stdout);
+    ```
+
+
+
+##### 13.5 바이너리 파일 입출력
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main(void){
+    /*
+        fopen() mode tring for binary IO
+        - "rb, "wb", "ab"
+        - "ab+", "a+b"
+        - "wb+", "w+b"
+        - "ab+" , "a+b"
+     
+        C11 'x' mode fails if the file exists, insteda of overwriting it.
+        - "wx", "wbx", "wb+x", "w+bx"
+     */
+    
+    // FILE Writing
+    {
+        FILE* fp = fopen("binary_file", "wb");
+        
+        double d = 1.0 / 3.0;
+        int n = 123;
+        int* parr = (int*)malloc(sizeof(int) * n);
+        if (!parr) exit(1);
+        for (int n = 0; n < 123; ++n)
+            *(parr+n) = n * 2;
+        
+        fwrite(&d, sizeof(d), 1, fp);
+        fwrite(&n, sizeof(n), 1, fp);
+        fwrite(parr, sizeof(int), n, fp);
+        
+        fclose(fp);
+        free(parr);
+        
+        // Total size is 8 * 1 + 4 * 1 + 123 * 4 = 504byte
+    }
+    
+    // FILE Reading, feof(), ferror()
+    {
+        FILE* fp = fopen("binary_file", "rb");
+        double d;
+        int n = 0;
+        
+        fread(&d, sizeof(d), 1, fp);
+        fread(&n, sizeof(n), 1, fp);
+        
+        int* parr = (int*)malloc(sizeof(int)*n);
+        if (!parr) exit(1);
+        
+        fread(parr, sizeof(int), n, fp);
+        
+        printf("feof = %n", feof(fp));
+      	// feof = 0
+        
+        printf("%f\n", d);
+      	// 0.333333
+        printf("%d\n", n);
+      	// 123
+        
+        for (int i = 0; i < n; i++)
+            printf("%d ", *(parr+i));
+        printf("\n");
+      	// 0 2 4 6 8 10 12 14 16 18 20 22 24 26...
+      	// ...240 242 244 
+        
+        printf("feof = %d\n", feof(fp));
+				// feof = 0      
+        
+        fread(&n, sizeof(n), 1, fp);   // read one more toward EOF
+        
+        printf("feof = %d\n", feof(fp));  // return snon-zero at EOF
+      	// feof = 1
+      
+        printf("ferror = %d\n", ferror(fp));  // return 0 : ok
+      	// ferror = 0
+        
+        fwrite(&n, sizeof(n), 1, fp);   // try writing to make an error
+        
+        printf("ferror = %d\n", ferror(fp)); // 0 is ok, non-zero otherwise
+      	// ferror = 1
+        
+        fclose(fp);
+    }
+    return 0;
+}
+```
+
+
+
+##### 13.6 파일 임의 접근 Random Access
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+/*
+    ABCDEF ...
+    Currnet position 0 and read -> A
+    Current position 1 and read -> B
+ */
+
+int main(void){
+    int ch;
+    long cur;
+    
+    FILE* fp = fopen("text.txt", "r");
+    
+    cur = ftell(fp);
+    printf("ftell() = %ld\n", cur);
+    // ftell() = 0
+    
+    fseek(fp, 2L, SEEK_SET);
+    
+    cur = ftell(fp);
+    printf("ftell() = %ld\n", cur);
+    // ftell() = 2
+    
+    ch = fgetc(fp);
+    printf("%d %c\n", ch, ch);
+    // 67 C
+    
+    cur = ftell(fp);
+    printf("ftell() = %ld\n", cur);
+    // ftell() = 3
+    
+    fseek(fp, -2L, SEEK_CUR);
+    cur = ftell(fp);
+    printf("ftell() = %ld\n", cur);
+    // ftell() = 1
+    
+    ch = fgetc(fp);
+    printf("%d %c\n", ch, ch);
+    // 66 B
+    
+    /* SEEK_END */
+    
+    fseek(fp, 0L, SEEK_END);
+    
+    ch = fgetc(fp);
+    printf("%d %c\n", ch, ch);
+    // -1 \377
+    
+    fseek(fp, -1L, SEEK_END);
+    ch = fgetc(fp);
+    printf("%d %c\n", ch, ch);
+    // 90 Z
+    
+    fseek(fp, -2L, SEEK_END);
+    ch = fgetc(fp);
+    printf("%d %c\n", ch, ch);
+    // 89 Y
+    
+    
+    
+    /* fsetpos(), fgetpos() */
+    // 파일이 큰 경우의 이동법
+    
+    fpos_t pt; // long long type
+    pt = 10;
+    fsetpos(fp, &pt);
+    
+    
+    ch = fgetc(fp); // return 0 ok
+    printf("%d %c \n", ch, ch);
+    // 75 K
+    
+    fgetpos(fp, &pt);
+    printf("%lld\n", pt);
+    // 11
+
+    return 0;
+}
+```
+
+* ```c
+  ftell()
+  ```
+
+  * 현재 위치 출력, 시작점으로 부터 떨어진 byte 읽기
+  * 읽은 후 1byte 이동
+
+* ```c
+  fseek(fp, 2L, SEEK_SET);
+  ```
+
+  * fseek(file point, 이동할 byte, 이동 기준점) 이동
+  * SEEK_SET : 시작점
+  * SEEK_END : 끝 점
+
+* ```c
+  fpos_t pt; // long long type
+  fsetpos(fp, &pt); // fseek()
+  fgetpos(fp, &pt);	// ftell()
+  ```
+
+  * 파일의 크기가 큰 경우 사용
+
+
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+/*
+    ABCDEF ...
+    Currnet position 0 and read -> A
+    Current position 1 and read -> B
+ */
+
+int main(void){
+    {
+        FILE* fp = fopen("binary", "wb");
+        for (int i = 0; i < 100; ++i)
+        {
+            double d = i * 1.11;
+            fwrite(&d, sizeof(double), 1, fp);
+        }
+        fclose(fp);
+    }
+    
+    // read
+    
+    FILE * fp = fopen("binary", "rb");
+    long cur;
+    double d;
+    
+    cur = ftell(fp);
+    printf("Before reading %ld\n", cur);
+    // Before reading 0
+    
+    fread(&d, sizeof(double), 1, fp);
+    
+    cur = ftell(fp);
+    printf("After reading %ld\n", cur);
+    // After reading 8
+    
+    printf("%f\n", d);
+    // 0.000000
+    fread(&d, sizeof(double), 1, fp);
+    printf("%f\n", d);
+    // 1.110000
+    
+    cur = ftell(fp);
+    printf("After reading %ld\n", cur);
+    // After reading 16
+    
+    fseek(fp, 32L, SEEK_SET);   // 32 = 4 * 8
+    fread(&d, sizeof(double), 1, fp);
+    printf("%f\n", d);
+    // 4.440000
+    
+    fclose(fp);
+    
+    
+    return 0;
+}
+```
+
+* Binary 임의 접근
+
+
+
+##### 13.7 기타 입출력 함수들
+
+##### 		ungetc(), fflush(), setvbuf()
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    FILE* fp;
+    int ch;
+    
+    /* ungetc() */
+    
+    fp = fopen("input.txt", "r");
+    
+    ch = fgetc(fp);
+    fputc(ch, stdout);
+    
+    ungetc(ch, fp);
+    // fputc(ch, stdout) 의 결과가 다시 출력됨
+    ungetc((int)'A', fp);
+  	// fputc(ch, stdout) 의 결과를 'A'로 변경하여 출력
+    
+    ch = fgetc(fp);
+    fputc(ch, stdout);
+    
+    fclose(fp);
+    
+    return 0;
+}
+```
+
+* ```c
+  ungetc(ch, fp);
+  ```
+
+  * 스트림에 마지막으로 읽어들여졌던 자리에, 문자를 넣어주고 파일 위치가 감소하여 읽기 이전으로 돌아가 스트림을 읽음
+
+
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    FILE* fp;
+    int ch;
+    
+    /* setvbuf() */
+    
+    fp = fopen("input.txt", "r");
+    
+    char bufferArray[32] = {'\0'};
+    
+    setvbuf(fp, bufferArray, _IOFBF, sizeof(buffer));    // _IOLBF, _IOFBF, IONBF
+    
+    ch = fgetc(fp); // Read just only a single character!
+    
+    // dump buffer
+    for (int i = 0; i < sizeof(buffer); ++i)
+        printf("%c", buffer[i]);
+    printf("\n");
+    
+    fclose(fp);
+    
+    return 0;
+}
+```
+
+* ```c
+  setvbuf(fp, bufferArray, _IOFBF, sizeof(buffer));    // _IOLBF, _IOFBF, IONBF
+  ```
+
+  * bufferArray 를 buffer 로 사용
+
+* ```c
+  ch = fgetc(fp); // Read just only a single character!
+  ```
+
+  * 파일 입력 Stream 에서 문자 하나만 읽었지만, 전체 문자열이 buffer 로 저장된다
+  * 파일에서 버퍼로 옮기는 것은 느리지만, 버퍼에서 처리하는 것은 빠르기 때문에 가능한 buffer 로 옮겨 두려고 함
+
+
+
+```c
+/* fflush() */
+fflush(fp)
+```
+
+* 출력 buffer 를 비움
+
+
+
+##### 13.8 텍스트 파일을 바이너리 처럼 읽어보기
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    FILE* fp = fopen("test.txt", "rb");
+    unsigned char ch;
+            
+    while(fread(&ch, sizeof(unsigned char), 1, fp) > 0)
+    {
+        printf("%hhu %c \n", ch, ch);
+    }
+    
+    fclose(fp);
+    return 0;
+}
+```
+
+* 출력
+
+  ```c
+  65 A 
+  66 B 
+  67 C 
+  10 
+   
+  68 D 
+  69 E 
+  10 
+   
+  49 1 
+  50 2 
+  51 3 
+  10 
+   
+  67 C 
+  236 \354 
+  150 \226 
+  184 \270 
+  236 \354 
+  150 \226 
+  180 \264 
+  10 
+  ```
 
